--- a/src/chapter2.adoc
+++ b/src/chapter2.adoc
@@ -1,5 +1,5 @@
 
 // include as many external files below in the format shown
 
-include::chapters/readme.adoc[]
+include::chapters/anotherfile.adoc[]
 
